--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>Class 2</title>
-        <meta> charset="utf-8"</title>
+        <meta>charset="utf-8"</meta>
         <link rel= "stylesheet" href="css/reset.css">
         <link rel= "stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>THis is class 2 demo.</h1>
+        <h1>This is class 2 demo.</h1>
         <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>   
