--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Class 2</title>
-        <meta>charset="utf-8"</meta>
+        <title>About Me</title>
+        <meta charset="utf-8" />
         <link rel= "stylesheet" href="css/reset.css">
         <link rel= "stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>This is class 2 demo.</h1>
+        <h1>This is a little about me.</h1>
+
+        <h2>Q1</h2>
+        <p>
+            Do I own pets?
+        </p>
+
+        <h2>Q2</h2>
+        <p>
+            Do I like football?    
+        </p>
+
+        <h2>Q3</h2>
+        <p>
+            Do I have kids?
+        </p>
+
+        <h2>Q4</h2>
+        <p>
+            Have I won the lotto?
+        </p>
+
+        <h2>Q5</h2>
+        <p>
+            Have I left the country?
+        </p>
+
         <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>   
