modified html and css files

--- a/index.html
+++ b/index.html
@@ -7,33 +7,27 @@
         <link rel= "stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>This is a little about me.</h1>
-
-        <h2>Q1</h2>
-        <p>
-            Do I own pets?
-        </p>
-
-        <h2>Q2</h2>
-        <p>
-            Do I like football?   
-        </p>
-
-        <h2>Q3</h2>
-        <p>
-            Do I have kids?
-        </p>
-
-        <h2>Q4</h2>
-        <p>
-            Have I won the lotto?
-        </p>
-
-        <h2>Q5</h2>
-        <p>
-            Have I left the country?
-        </p>
-
+        <h1>Thanks for visiting my website.</h1>
+        <section>
+            <h2>Here are some questions about me</h2>
+                <ol class="my-questions">
+                    <li>Do I own pets?</li>
+                    <li>Do I like football?</li>
+                    <li>Do I have kids?</li>
+                    <li>Have I won the lotto?</li>
+                    <li>Have I left the country?</li>
+                </ol>    
+        </section>
+        <section>
+            <h2>These are the answers to those quesions</h2> 
+                <ul class="my-answers">
+                    <li>Not currently</li>
+                    <li>I love football</li>
+                    <li>I have 2 wonderful boys</li>
+                    <li>I have not</li>
+                    <li>I have been to a couple other countries</li>
+                </ul>
+        </section>
         <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>   
