fine tuning the js and html docs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </ol>    
       </section>
       <section>
-        <h2>These are the answers to those quesions</h2> 
+        <h2>These are the answers to those questions</h2> 
           <ul class="my-answers">
             <li>Not currently</li>
             <li>I love football</li>
@@ -27,7 +27,7 @@
             <li>I have not</li>
             <li>I have been to a couple other countries</li>
           </ul>
-      </section>
       <script type="text/javascript" src="js/app.js"></script>
+      </section>
   </body>
 </html>   
