fixed q7 loop. working now

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <h1>Thanks for visiting my website.</h1>
+    <br>
+    <h2>Intro</h3>
+      <p>This website is a little about me. It's designed to be a little fun and give you a glimpse 
+        into some of the things I enjoy. I hope you find it entertaining.</p>
       <section>
-        <h2>Here are some questions about me</h2>
+        <h3>Here are some questions about me</h3>
           <ol class="my-questions">
             <li>Do I own pets?</li>
             <li>Do I like football?</li>
@@ -19,7 +23,7 @@
           </ol>    
       </section>
       <section>
-        <h2>These are the answers to those questions</h2> 
+        <h3>These are the answers to those questions</h3> 
           <ul class="my-answers">
             <li>Not currently</li>
             <li>I love football</li>
