modifying js and html files

--- a/index.html
+++ b/index.html
@@ -10,26 +10,35 @@
     <h1>Thanks for visiting my website.</h1>
     <br>
     <h2>Intro</h3>
-      <p>This website is a little about me. It's designed to be a little fun and give you a glimpse 
-        into some of the things I enjoy. I hope you find it entertaining.</p>
+      <p>Thank you for visiting my website. I am an asprirng web developer and am in the beginning stages of what I am hoping will be a very fruitful career. This website was designed to give you little glipmse of some of the thinks I enjoy. I created it to be fun and entertaining but I have a long way to go before it's completely ready for the public. I hope you find it enjoyable.</p>
       <section>
-        <h3>Here are some questions about me</h3>
+        <h3>Guessing game</h3>
           <ol class="my-questions">
-            <li>Do I own pets?</li>
-            <li>Do I like football?</li>
-            <li>Do I have kids?</li>
-            <li>Have I won the lotto?</li>
-            <li>Have I left the country?</li>
+            <li>Do I own pets?
+              <p>Not currently</p></li>
+            <li>Do I like football?
+              <p>I love football</p></li>
+            <li>Do I have kids?
+              <p>I have 2 wonderful boys</p></li>
+            <li>Have I won the lotto?
+              <p>I wish I did..but no</p></li>
+            <li>Have I been out of the country?
+              <p>I have been to a couple of countries</p></li>
           </ol>    
       </section>
       <section>
-        <h3>These are the answers to those questions</h3> 
-          <ul class="my-answers">
-            <li>Not currently</li>
-            <li>I love football</li>
-            <li>I have 2 wonderful boys</li>
-            <li>I have not</li>
-            <li>I have been to a couple other countries</li>
+        <h3>Here are my top 10 movies</h3> 
+          <ul class="my-movies">
+            <li>Gladiator</li>
+            <li>Pulp Fiction</li>
+            <li>Avengers</li>
+            <li>Captain America: Civil War</li>
+            <li>The Revenant</li>
+            <li>Interstellar</li>
+            <li>Logan</li>
+            <li>Braveheart</li>
+            <li>Inception</li>
+            <li>Terminator 2: Judgement Day</li>
           </ul>
       <script type="text/javascript" src="js/app.js"></script>
       </section>
