updated html and css

--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
   </head>
   <body>
     <h1>Thanks for visiting my website.</h1>
+    <nav>
+      <ul class="nav-items">
+        <li>About Me</li>
+        <li>Guessing Game</li>
+        <li>Contact Info</li>
+       </ul>
+    </nav>
     <br>
-    <h2>Intro</h3>
-      <p>Thank you for visiting my website. I am an asprirng web developer and am in the beginning stages of what I am hoping will be a very fruitful career. This website was designed to give you little glipmse of some of the thinks I enjoy. I created it to be fun and entertaining but I have a long way to go before it's completely ready for the public. I hope you find it enjoyable.</p>
+    <section>
+    <h2>Intro</h2>
+    <img src="https://placehold.it/250">
+      <p class="main-para">Thank you for visiting my website. I am an asprirng web developer and am in the beginning stages of what I am hoping will be a very fruitful career. This website was designed to give you little glipmse of some of the things I enjoy. I created it to be fun and entertaining but I have a long way to go before it's completely ready for the public. I hope you find it enjoyable.</p>
+    </section>
       <section>
         <h3>Guessing game</h3>
           <ol class="my-questions">
