--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <img src="https://placehold.it/250">
       <p class="main-para">Thank you for visiting my website. I am an asprirng web developer and am in the beginning stages of what I am hoping will be a very fruitful career. This website was designed to give you little glipmse of some of the things I enjoy. I created it to be fun and entertaining but I have a long way to go before it's completely ready for the public. I hope you find it enjoyable.</p>
     </section>
+    <br>
       <section>
         <h3>Guessing game</h3>
           <ol class="my-questions">
@@ -36,8 +37,9 @@
               <p>I have been to a couple of countries</p></li>
           </ol>    
       </section>
+      <br>
       <section>
-        <h3>Here are my top 10 movies</h3> 
+        <h3 class="top-movies">Here are my top 10 movies</h3> 
           <ul class="my-movies">
             <li>Gladiator</li>
             <li>Pulp Fiction</li>
