--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
       <link rel= "stylesheet" href="css/style.css">
   </head>
   <body>
+    <div class="heading"></div>
     <h1>Thanks for visiting my website.</h1>
+  </div>
     <nav>
       <ul class="nav-items">
         <li>About Me</li>
